@@ -70,12 +70,23 @@ public abstract class JdbcHelper {
     public abstract Span createJdbcSpan(@Nullable String sql, Object statement, @Nullable TraceContextHolder<?> parent, boolean preparedStatement);
 
     /**
-     * Safely wraps calls to {@link java.sql.Statement#getUpdateCount()}
+     * Safely wraps calls to {@link java.sql.Statement#getUpdateCount()} and stores last result.
+     * <p>
+     * getUpdateCount javadoc indicates that this method should be called only once.
+     * In practice, adding this extra call seem to not have noticeable side effects on most databases but Oracle.
+     * </p>
      *
      * @param statement {@code java.sql.Statement} instance
-     * @return {@link Long#MIN_VALUE} if statement does not support this feature, returned value otherwise
+     * @return {@link Integer#MIN_VALUE} if statement does not support this feature, returned value otherwise
      */
-    public abstract long safeGetUpdateCount(Object statement);
+    public abstract int getAndStoreUpdateCount(Object statement);
 
+    /**
+     * Get and clears stored update count (if any) for a given statement.
+     *
+     * @param statement {@code java.sql.Statement} instance
+     * @return {@link Integer#MIN_VALUE} if there is no stored value for this statement
+     */
+    public abstract int getAndClearStoredUpdateCount(Object statement);
 
 }
