@@ -56,6 +56,12 @@ public class JdbcHelperImpl extends JdbcHelper {
     private final WeakConcurrentMap<Class<?>, Boolean> metadataSupported = new WeakConcurrentMap.WithInlinedExpunction<Class<?>, Boolean>();
     private final WeakConcurrentMap<Class<?>, Boolean> connectionSupported = new WeakConcurrentMap.WithInlinedExpunction<Class<?>, Boolean>();
 
+    // keeps track of non-idempotent implementations of getUpdateCount
+    private final WeakConcurrentMap<Class<?>, Boolean> idempotentGetUpdateCount = new WeakConcurrentMap.WithInlinedExpunction<Class<?>, Boolean>();
+
+    // stores statements update count to avoid side-effects of calling Statement.getUpdateCount()
+    private final WeakConcurrentMap<Object, Integer> statementsUpdateCount = new WeakConcurrentMap.WithInlinedExpunction<>();
+
     @VisibleForAdvice
     public final ThreadLocal<SignatureParser> SIGNATURE_PARSER_THREAD_LOCAL = new ThreadLocal<SignatureParser>() {
         @Override
@@ -70,6 +76,7 @@ public class JdbcHelperImpl extends JdbcHelper {
         updateCountSupported.clear();
         metadataSupported.clear();
         connectionSupported.clear();
+        statementsUpdateCount.clear();
     }
 
     @Override
@@ -184,8 +191,8 @@ public class JdbcHelperImpl extends JdbcHelper {
 
 
     @Override
-    public long safeGetUpdateCount(Object statement) {
-        long result = Long.MIN_VALUE;
+    public int getAndStoreUpdateCount(Object statement) {
+        int result = Integer.MIN_VALUE;
         if (!(statement instanceof Statement)) {
             return result;
         }
@@ -201,11 +208,34 @@ public class JdbcHelperImpl extends JdbcHelper {
             if (supported == null) {
                 markSupported(updateCountSupported, type);
             }
+
+            // in order to minimize allocation, we keep track of implementation classes that are not idempotent,
+            // that allows avoiding extra work for the most common idempotent case.
+            Boolean isIdempotent = isSupported(idempotentGetUpdateCount, type);
+            if (isIdempotent == null) {
+                int secondResult = ((Statement) statement).getUpdateCount();
+                isIdempotent = (secondResult == result) ? Boolean.TRUE : Boolean.FALSE;
+                idempotentGetUpdateCount.put(type, isIdempotent);
+            }
+
+            if (isIdempotent != Boolean.TRUE) {
+                // save the value to be restored for the next call to getUpdateCount()
+                statementsUpdateCount.put(statement, result);
+            }
+
         } catch (SQLException e) {
             markNotSupported(updateCountSupported, type, e);
         }
-
         return result;
+    }
+
+    @Override
+    public int getAndClearStoredUpdateCount(Object statement) {
+        Integer value = null;
+        if (Boolean.FALSE == idempotentGetUpdateCount.get(statement.getClass())) {
+            value = statementsUpdateCount.remove(statement);
+        }
+        return value != null ? value : Integer.MIN_VALUE;
     }
 
     @Nullable
@@ -223,6 +253,5 @@ public class JdbcHelperImpl extends JdbcHelper {
             logger.warn("JDBC feature not supported on class " + type, e);
         }
     }
-
 
 }
