@@ -1,1 +1,1 @@
-
+oracle.container.image=wnameless/oracle-xe-11g-r2:latest
